--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "xdc3.js",
+    "name": "xdc3-beta.js",
+    "version": "0.1.3",
     "private": true,
     "description": "Ethereum JavaScript API wrapper repository",
     "license": "LGPL-3.0",
@@ -48,44 +49,19 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/ethereum/xdc3.js.git"
+        "url": "https://github.com/rudreshsolanki97/xdc3.js.git"
     },
-    "homepage": "https://github.com/ethereum/xdc3.js",
+    "homepage": "https://github.com/rudreshsolanki97/xdc3.js",
     "bugs": {
-        "url": "https://github.com/ethereum/xdc3.js/issues"
+        "url": "https://github.com/rudreshsolanki97/xdc3.js/issues"
     },
     "keywords": [
         "Ethereum",
         "JavaScript",
         "API"
     ],
-    "author": "ethereum.org",
-    "authors": [
-        {
-            "name": "Fabian Vogelsteller",
-            "email": "fabian@ethereum.org",
-            "homepage": "https://github.com/frozeman"
-        },
-        {
-            "name": "Marek Kotewicz",
-            "email": "marek@parity.io",
-            "url": "https://github.com/debris"
-        },
-        {
-            "name": "Marian Oancea",
-            "url": "https://github.com/cubedro"
-        },
-        {
-            "name": "Gav Wood",
-            "email": "g@parity.io",
-            "homepage": "http://gavwood.com"
-        },
-        {
-            "name": "Jeffery Wilcke",
-            "email": "jeffrey.wilcke@ethereum.org",
-            "url": "https://github.com/obscuren"
-        }
-    ],
+    "author": "xinfin.org",
+    "authors": [],
     "devDependencies": {
         "@babel/cli": "^7.12.1",
         "@babel/core": "^7.12.3",
