--- a/packages/xdc3-providers-ws/package.json
+++ b/packages/xdc3-providers-ws/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xdc3-providers-ws",
-  "version": "1.3.4",
+  "version": "0.1.0",
   "description": "Module to handle xdc3 RPC connections over WebSockets.",
   "repository": "https://github.com/ethereum/xdc3.js/tree/1.x/packages/xdc3-providers-ws",
   "license": "LGPL-3.0",
@@ -16,8 +16,8 @@
   "dependencies": {
     "eventemitter3": "4.0.4",
     "underscore": "1.9.1",
-    "xdc3-core-helpers": "1.3.4",
-    "websocket": "^1.0.32"
+    "websocket": "^1.0.32",
+    "xdc3-core-helpers": "0.1.0"
   },
   "devDependencies": {
     "dtslint": "^3.4.1",
