--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "xdc3-beta.js",
+    "name": "xdc3.js",
     "version": "0.1.3",
     "private": true,
     "description": "Ethereum JavaScript API wrapper repository",
