--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "web3.js",
     "private": true,
+    "version": "1.3.4",
     "description": "Ethereum JavaScript API wrapper repository",
     "license": "LGPL-3.0",
     "engines": {
