--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "web3.js",
+    "name": "xdc3.js",
     "private": true,
     "version": "1.3.4",
     "description": "Ethereum JavaScript API wrapper repository",
