lib name change

--- a/packages/web3-bzz/types/tsconfig.json
+++ b/packages/web3-bzz/types/tsconfig.json
@@ -11,7 +11,7 @@
         "allowSyntheticDefaultImports": false,
         "baseUrl": ".",
         "paths": {
-            "web3-bzz": ["."]
+            "xdc3-rud-bzz": ["."]
         }
     }
 }
