--- a/packages/web3-core-method/types/tsconfig.json
+++ b/packages/web3-core-method/types/tsconfig.json
@@ -11,7 +11,7 @@
         "allowSyntheticDefaultImports": false,
         "baseUrl": ".",
         "paths": {
-            "web3-core-method": ["."]
+            "xdc3-rud-core-method": ["."]
         }
     }
 }
