--- a/packages/web3-core-subscriptions/types/tsconfig.json
+++ b/packages/web3-core-subscriptions/types/tsconfig.json
@@ -11,7 +11,7 @@
         "allowSyntheticDefaultImports": false,
         "baseUrl": ".",
         "paths": {
-            "web3-core-subscriptions": ["."]
+            "xdc3-rud-core-subscriptions": ["."]
         }
     }
 }
