--- a/packages/web3-eth-accounts/types/tsconfig.json
+++ b/packages/web3-eth-accounts/types/tsconfig.json
@@ -11,7 +11,7 @@
         "allowSyntheticDefaultImports": false,
         "baseUrl": ".",
         "paths": {
-            "web3-eth-accounts": ["."]
+            "xdc3-rud-eth-accounts": ["."]
         }
     }
 }
