--- a/packages/web3-utils/types/tsconfig.json
+++ b/packages/web3-utils/types/tsconfig.json
@@ -11,7 +11,7 @@
         "allowSyntheticDefaultImports": false,
         "baseUrl": ".",
         "paths": {
-            "web3-utils": ["."]
+            "xdc3-rud-utils": ["."]
         }
     }
 }
