--- a/packages/web3/types/tsconfig.json
+++ b/packages/web3/types/tsconfig.json
@@ -11,7 +11,7 @@
         "allowSyntheticDefaultImports": false,
         "baseUrl": ".",
         "paths": {
-            "web3": ["."]
+            "xdc3-rud": ["."]
         }
     }
 }
